tests/base/invalid/Assign_CompileFail_1.whiley
import * from whiley.lang.*

int f():     
    return true
